# hyperdeck-timeremaining

./: README.md  hyperdeck-telnetclient.service  hyperdeck-timeremaining.py  hyperdeck-timeremaining.service  pyproject.toml  telnetter.py
static/: style.css
templates/: index.j2
